# agroservices

./: .coveragerc  .cruft.json  .gitignore  .readthedoc.yaml  .readthedocs.yaml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: conda-package-build.yml  openalea_ci.yml
conda/: environment.yml  meta.yaml
doc/: conf.py  environment.yml  extra.md  index.md  installation.md  requierement.txt  requierements.txt  requirements.txt  usage.md
doc/examples/: quick_start.ipynb
doc/source/: conf.py  index.rst  requierement.txt
doc/source/_templates/autosummary/: module.rst
doc/source/install/: index.rst  linux.rst  miniconda.rst  windows.rst
doc/source/references/: agroservices.ipm.rst  agroservices.phis.rst  index.rst
doc/source/user/: index.rst  quick_start.nblink  quick_start.rst  weather_ipm_interface.nblink
example/: quick_start.ipynb  weather_ipm_interface.ipynb
example/phis/: quickstart.ipynb
src/agroservice/: __init__.py  ipm.py  phis.py  services.py  settings.py
src/agroservices/: __init__.py  credentials.py  datadir.py  ipm.py  services.py  settings.py
src/agroservices/credentials/: my_agroservice.json
src/agroservices/data/ipm/: test_yaml_validate.yaml
src/agroservices/ipm/: datadir.py  fakers.py  fixes.py  ipm.py
src/agroservices/ipm/data/: model_input_psilarobse.json  schema_fieldobservation.json
src/agroservices/phis/: phis.py  phis_interface.py
src/openalea/agroservices/: __init__.py  credentials.py  services.py  settings.py  version.py
src/openalea/agroservices/ipm/: __init__.py  datadir.py  fakers.py  fixes.py  ipm.py
src/openalea/agroservices/ipm/data/: GeoJson.json  IPM Decisions Weather API tests.postman_collection.json  countries.json  dss_meta_data.json  model_input_psilarobse.json  model_input_psilartemp.json  schema_weatherdata.json  weather_data.json
src/openalea/agroservices/phis/: __init__.py  phis.py
test/: modeloutput.json  test_IPM.py  test_IPM_class.py  test_dss.py  test_dss_input_data_fakers.py  test_phis.py  test_weatherdata.py
