[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

# where your source lies if you followed src layout
[tool.setuptools.packages.find]
where = ["src"]
include = ["openalea.*"]

[tool.setuptools]
include-package-data = false # force explicit declaration of data (disable automatic inclusion)

[tool.setuptools.package-data]
"openalea.pkg_name" = ["data/**/*"]

# enable dynamic version based on git tags
[tool.setuptools_scm]

[project]
name = "openalea.agroservices"
authors = [
  { name = "Christian Fournier"},
  { name = "Christophe Pradal"},
  { name = "Marc Labadie"},
  { name = "Aurelien Besnier"},
]
description = "FSPM tools for OpenAlea"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: CeCILL-C License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

# you can list here all dependencies that are pip-instalable, and that have a name identical to the one used by conda (to allow reuse of this list in meta.yaml)
# If conda name is different, please do not declare the pip name, and declare conda name in the next section
dependencies = [
  "appdirs",
  "bs4",
  "colorlog",
  "requests",
  "requests_cache",
  "pygments",
  "jsf",
  "pyyaml"
]

[project.optional-dependencies]
test = [
  "pytest",
  "nbmake",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
doc = [
  "sphinx-autobuild",
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon",
  "ipykernel",
  "sphinx-copybutton",
  "ipython_genutils",
  "nbsphinx",
]

[project.urls]
Repository = "https://github.com/openalea/agroservices"
Homepage = "https://agroservices.readthedocs.io/"
"Bug Tracker" = "https://github.com/openalea/agroservices/issues"
Discussions = "https://github.com/openalea/agroservices/discussions"
Changelog = "https://github.com/openalea/agroservices/releases"

